--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "scripts": {
     "lint": "eslint . --ext .mjs,.cjs",
-    "lint:fix": "npm run lint -- --fix"
+    "lint:fix": "npm run lint -- --fix",
+    "prepare": "husky install"
   },
   "bin": {
     "strip-ansi": "strip-ansi.mjs"
@@ -24,6 +25,7 @@
     "@babel/eslint-parser": "^7.22.15",
     "@babel/preset-env": "^7.22.15",
     "@sequencemedia/hooks": "^1.0.451",
+    "husky": "^8.0.3",
     "core-js": "^3.32.2",
     "eslint": "^8.49.0",
     "eslint-config-standard": "^17.1.0"
