Updated `package.json` &/ `package-lock.json`

--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
     "strip-ansi": "^7.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.22.17",
+    "@babel/core": "^7.22.19",
     "@babel/eslint-parser": "^7.22.15",
     "@babel/preset-env": "^7.22.15",
     "@sequencemedia/hooks": "^1.0.451",
-    "husky": "^8.0.3",
     "core-js": "^3.32.2",
     "eslint": "^8.49.0",
-    "eslint-config-standard": "^17.1.0"
+    "eslint-config-standard": "^17.1.0",
+    "husky": "^8.0.3"
   }
 }
