--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "url": "https://sequencemedia.net"
   },
   "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/sequencemedia/strip-ansi.git"
+  },
   "scripts": {
     "lint": "eslint . --ext .mjs,.cjs",
     "lint:fix": "npm run lint -- --fix",
