--- a/.npmignore
+++ b/.npmignore
@@ -1,14 +1,15 @@
 .DS_Store
 
 .circleci
-.github
 .husky
 
 .editorconfig
 .eslintignore
 .eslintrc
 
+.github
 .gitattributes
+.gitignore
 
 .depsrc
 
