--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "scripts": {
     "lint": "eslint . --ext .mjs,.cjs",
     "lint:fix": "npm run lint -- --fix",
-    "prepare": "husky install"
+    "prepare": "husky"
   },
   "bin": {
     "strip-ansi": "strip-ansi.mjs"
@@ -28,8 +28,8 @@
     "@babel/core": "^7.23.9",
     "@babel/eslint-parser": "^7.23.10",
     "@babel/preset-env": "^7.23.9",
-    "@sequencemedia/hooks": "^1.0.480",
-    "@types/node": "^20.11.17",
+    "@sequencemedia/hooks": "^1.0.481",
+    "@types/node": "^20.11.19",
     "core-js": "^3.36.0",
     "eslint": "^8.56.0",
     "eslint-config-standard": "^17.1.0",
