--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "url": "git://github.com/sequencemedia/strip-ansi.git"
   },
   "scripts": {
-    "lint": "eslint . --ext .mjs,.cjs",
+    "lint": "eslint .",
     "lint:fix": "npm run lint -- --fix",
     "prepare": "husky"
   },
@@ -28,11 +28,11 @@
     "@babel/core": "^7.24.7",
     "@babel/eslint-parser": "^7.24.7",
     "@babel/preset-env": "^7.24.7",
+    "@sequencemedia/eslint-config-standard": "^0.0.3",
     "@sequencemedia/hooks": "^1.0.496",
     "@types/node": "^20.14.9",
     "core-js": "^3.37.1",
-    "eslint": "8.57.0",
-    "eslint-config-standard": "^17.1.0",
+    "eslint": "^9.6.0",
     "husky": "^9.0.11"
   }
 }
